admin type stuff
 - changed the theme name from slate-concrete to Concrete
 - upload zip has now changed
 - modified the package.json information
 - new deploy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "slate-concrete",
-  "version": "0.0.1",
+  "name": "Concrete",
+  "description": "Concrete Shopify Theme Framework - A lightweight framework for building Shopify themes",
+  "homepage": "https://github.com/Elkfox/Concrete/",
+  "license" : "MIT",
+  "version": "2",
   "devDependencies": {
     "@shopify/slate-tools": "0.12.1"
   }
