--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
 		"stylelint-config-shopify": "^5.0.0"
 	},
 	"dependencies": {
-		"jquery": "^3.2.1",
-		"normalize.css": "^7.0.0",
-		"lazysizes": "^4.0.2",
+		"@shopify/theme-a11y": "^1.0.0-alpha.3",
 		"@shopify/theme-images": "^1.0.0-alpha.3",
-		"@shopify/theme-a11y": "^1.0.0-alpha.3"
+		"handlebars": "^4.0.11",
+		"jquery": "^3.2.1",
+		"lazysizes": "^4.0.2",
+		"normalize.css": "^7.0.0",
+		"qrcode": "^1.2.0"
 	},
 	"scripts": {
 		"start": "slate-tools start",
