--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@shopify/theme-a11y": "^1.0.0-alpha.3",
 		"@shopify/theme-images": "^1.0.0-alpha.3",
 		"handlebars": "^4.0.11",
+		"imports-loader": "^0.8.0",
 		"jquery": "^3.2.1",
 		"lazysizes": "^4.0.2",
 		"normalize.css": "^7.0.0",
