:sparkles: Basic CartFox & Queue

--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@shopify/theme-rte": "^1.0.0-alpha.7",
     "@shopify/theme-sections": "^1.0.0-alpha.7",
     "@shopify/theme-variants": "^1.0.0-alpha.8",
-    "cartfox": "^3.0.2-alpha",
+    "@elkfox/queue": ">=0.0.7",
+    "@elkfox/cart": ">=3.0.0-alpha.5",
     "jquery": "^3.2.1",
+    "handlebars": ">=4.0.0",
     "lazysizes": "^4.0.2",
     "lodash-es": "^4.17.4",
     "normalize.css": "^7.0.0"
