--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "stylelint-config-shopify": "^5.0.0"
   },
   "dependencies": {
+    "@elkfox/grid": "^0.0.6",
     "@shopify/theme-a11y": "^1.0.1",
     "@shopify/theme-addresses": "^1.0.0",
     "@shopify/theme-cart": "^1.0.0-alpha.7",
@@ -30,7 +31,6 @@
     "@shopify/theme-rte": "^1.0.0-alpha.7",
     "@shopify/theme-sections": "^1.1.0",
     "@shopify/theme-variants": "^1.0.0-alpha.8",
-    "grid50": "^0.5.12",
     "jquery": "^3.2.1",
     "lazysizes": "^4.1.1",
     "lodash-es": "^4.17.4",
