--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "stylelint-config-shopify": "^5.0.0"
   },
   "dependencies": {
+    "@elkfox/shopify-theme": "^0.0.8",
     "@shopify/theme-a11y": "^2.0.1",
     "@shopify/theme-addresses": "^3.0.0",
     "@shopify/theme-cart": "^1.0.0-alpha.7",
@@ -32,11 +33,11 @@
     "@shopify/theme-rte": "^1.0.0-alpha.7",
     "@shopify/theme-sections": "^1.1.0",
     "@shopify/theme-variants": "^1.0.0-alpha.8",
-    "jquery": "^3.2.1",
     "lazysizes": "^4.1.1",
     "lodash-es": "^4.17.4",
     "normalize.css": "^7.0.0",
-    "qrcode": "^1.3.2"
+    "qrcode": "^1.3.2",
+    "sass-library": "^0.1.0"
   },
   "scripts": {
     "start": "slate-tools start",
