--- a/package.json
+++ b/package.json
@@ -33,8 +33,13 @@
     "@shopify/theme-rte": "^1.0.0-alpha.7",
     "@shopify/theme-sections": "^1.1.0",
     "@shopify/theme-variants": "^1.0.0-alpha.8",
+    "fstream": "^1.0.12",
+    "handlebars": "^4.5.3",
     "lazysizes": "^4.1.1",
-    "lodash-es": "^4.17.4",
+    "lodash-es": "^4.17.15",
+    "lodash.mergewith": "^4.6.2",
+    "merge": "^1.2.1",
+    "mixin-deep": "^1.3.2",
     "node-fetch": "^2.6.0",
     "normalize.css": "^7.0.0",
     "qrcode": "^1.3.2",
